--- a/front/src/components/small/AlertModal.scss
+++ b/front/src/components/small/AlertModal.scss
@@ -1,10 +1,8 @@
 .alert-modal-overlay {
   position: fixed;
-  top: 0;
+  top: 20%;
   left: 0;
   width: 100%;
-  height: 30%;
-  background-color: rgba(0, 0, 0, 0.4); // 반투명 배경
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,19 +28,19 @@
   }
 
   &.hidden {
-    display: none; // alert 사라진 후 display: none 처리
+    display: none;
   }
 }
 
 .alert-modal {
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.7);
   color: white;
-  border-radius: 8px;
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  font-size: 16px;
-  max-width: 400px;
-  width: 100%;
+  font-size: 1.5em;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1);
+  max-width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  width: 90%;
   text-align: center;
   z-index: 61;
   opacity: 0;
@@ -66,11 +64,24 @@
   }
 
   .alert-message {
+    display: flex;
+    align-items: center;
     font-weight: bold;
+    width: 100%;
+    img {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+    }
+    p {
+      width: 80%;
+      display: flex;
+      justify-content: center;
+    }
   }
 }
 
 .alert-modal-overlay.hidden,
 .alert-modal.hidden {
-  display: none; // alert가 사라지면 display: none 적용
+  display: none;
 }
