--- a/front/src/components/Words.scss
+++ b/front/src/components/Words.scss
@@ -3,124 +3,119 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  top: 0;
 
   .list-header {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between; /* 좌우로 배치 */
-    background-color: #f9fafb; /* 연한 배경 */
-    padding: 5px; /* 상하좌우 여백 */
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 */
-    margin-bottom: 1.5rem; /* 아래 공간 */
+    justify-content: space-between;
+    background-color: #f9fafb;
+    padding: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 1.5rem;
     position: sticky;
-    top: 0;
+    top: 0px;
     z-index: 10;
-    background: rgba(255, 255, 255, 0.8); /* 반투명 흰색 */
-    backdrop-filter: blur(10px); /* 블러 효과 */
+    background: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(10px);
 
     .title-box {
       display: flex;
-      align-items: center; /* 왼쪽 정렬 */
+      align-items: center;
       width: 80%;
       .list-title {
-        font-size: 1.875rem; /* 제목 크기 */
-        font-weight: bold; /* 굵은 글씨 */
+        font-size: 1.5rem;
+        font-weight: bold;
         background: linear-gradient(
           to right,
           #ef4444,
           #f59e0b,
           #ec4899
         ); /* 그라데이션 */
-        -webkit-background-clip: text; /* 글자에만 그라데이션 */
-        -webkit-text-fill-color: transparent; /* 텍스트 색상을 투명으로 */
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
         text-align: left;
-        font-style: italic; /* 기울임체 */
-        padding-right: 0.5rem; /* 텍스트 오른쪽 여백 */
-        overflow: visible; /* 컨테이너가 텍스트를 숨기지 않도록 */
-        animation: tracking-in-expand 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
-          both; /* 애니메이션 추가 */
+        font-style: italic;
+        padding-right: 0.5rem;
+        overflow: visible;
+        animation: tracking-in-expand 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
       }
       .incorrect-list-title {
-        font-size: 1.5rem; /* 제목 크기 */
+        font-size: 1.3rem;
       }
       .incorrect-list-flag {
         font-size: 0.7em;
-        color: #ff6347; /* 이걸 원하는 색상으로 변경 */
+        color: #ff6347;
         margin-left: 5px;
-        font-style: italic; /* 글자 기울이기 */
+        font-style: italic;
       }
       .icon {
-        font-size: 2rem; /* 아이콘 크기 */
-        color: #ec4899; /* 민트 포인트 */
-        margin-left: 0.5rem; /* 제목과 간격 */
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* 그림자 효과 */
+        font-size: 2rem;
+        color: #ec4899;
+        margin-left: 0.5rem;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
         margin-right: 10px;
       }
     }
 
     .incorrect-list-btn {
-      color: #fff; /* 글자 색 */
-      border: none; /* 테두리 제거 */
-      border-radius: 8px; /* 둥근 버튼 */
-      padding: 0.5rem 1rem; /* 버튼 크기 */
-      font-size: 1rem; /* 버튼 텍스트 크기 */
-      font-weight: bold; /* 굵은 글씨 */
-      cursor: pointer; /* 클릭 가능 커서 */
-      transition: transform 0.3s ease; /* 클릭 시 애니메이션 */
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: transform 0.3s ease;
       width: 60px;
       height: 40px;
       display: flex;
       justify-content: center;
       align-items: center;
-      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); /* 가로, 세로, 블러, 투명도 */
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       .icon {
         width: 25px;
         height: 25px;
       }
 
       &:hover {
-        transform: scale(1.1); /* 살짝 커지기 */
+        transform: scale(1.1);
       }
     }
 
     .create-incorrect-list-button {
-      background: linear-gradient(
-        to right,
-        #3b82f6,
-        #10b981,
-        #14b8a6
-      ); /* 버튼 배경 그라데이션 */
+      background: linear-gradient(to right, #3b82f6, #10b981, #14b8a6);
     }
 
     .join-incorrect-list-button {
-      background: linear-gradient(
-        to right,
-        #ef4444,
-        #f59e0b,
-        #ec4899
-      ); /* 버튼 배경 그라데이션 */
+      background: linear-gradient(to right, #ef4444, #f59e0b, #ec4899);
     }
 
     .back-to-list-button {
-      background: linear-gradient(
-        to right,
-        #10b981,
-        /* 연한 초록 */ #16a34a,
-        /* 중간 초록 */ #22c55e /* 진한 초록 */
-      );
+      background: linear-gradient(to right, #10b981, #16a34a, #22c55e);
     }
   }
 
   .word-lists {
     display: flex;
-    flex-direction: column;
-    width: 95%;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
   }
 
   .word-box-select {
-    width: 300px;
+    width: 375px;
     padding: 1px;
+    transition: width 0.3s ease;
+  }
+
+  @media screen and (min-width: 768px) {
+    .word-box-select {
+      width: 500px;
+    }
   }
 
   .btns {
@@ -130,12 +125,12 @@
     bottom: 50px;
     height: 90px;
     display: flex;
-    justify-content: space-around; // 버튼을 가운데에 위치시킴
+    justify-content: space-around;
     align-items: center;
     padding: 0 20px;
     .side-btns {
       position: fixed;
-      left: -100px; // 처음에는 화면 밖에 위치
+      left: -100px;
       bottom: 130px;
       height: 300px;
       width: 80px;
@@ -144,16 +139,16 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-around;
-      transition: all 0.5s ease; // 부드러운 애니메이션
+      transition: all 0.5s ease;
       &.active {
-        left: 20px; // 버튼이 활성화되면 슬라이드로 나타남
+        left: 20px;
       }
 
       .side-btn {
-        width: 50px; // 버튼 크기
+        width: 50px;
         height: 50px;
-        background-color: #fff; // 버튼 중앙 색상 (하얀색)
-        border-radius: 50%; // 원형 버튼
+        background-color: #fff;
+        border-radius: 50%;
         background-clip: padding-box;
         display: flex;
         justify-content: center;
@@ -163,7 +158,7 @@
         cursor: pointer;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
         font-weight: 500;
-        color: #4682b4; /* Steel Blue */
+        color: #4682b4;
         flex-direction: column;
         p {
           font-size: 0.8em;
@@ -184,7 +179,7 @@
         &:hover {
           width: 55px;
           height: 55px;
-          box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2); // hover 시 그림자 효과
+          box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
           .icon {
             width: 25px;
             height: 25px;
@@ -197,10 +192,10 @@
           .icon {
             width: 25px;
             height: 25px;
-            color: #ffffff; /* Navy 색상으로 변경 */
+            color: #ffffff;
           }
           p {
-            color: #ffffff; /* Navy 색상으로 변경 */
+            color: #ffffff;
             transform: scale(0.8);
             margin: 0;
           }
