--- a/front/src/components/small/WordBox.scss
+++ b/front/src/components/small/WordBox.scss
@@ -2,16 +2,16 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
-  border: 1px solid #e5e7eb; // 연한 회색 테두리
+  border: 1px solid #e5e7eb;
   margin: 3px;
-  border-radius: 8px; // 둥근 모서리
-  background-color: #fff; // 흰 배경
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); // 부드러운 그림자
-  transition: all 0.3s ease; // 호버시 애니메이션
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
 
   &:hover {
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); // 호버시 그림자 강조
-    transform: translateY(-2px); // 마우스 올리면 살짝 위로 올라가는 효과
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transform: translateY(-2px);
   }
 
   .main-content {
@@ -33,11 +33,11 @@
         text-align: center;
         align-items: center;
         width: 50%;
-        font-size: 2em; // 단어 크기 크게
-        font-weight: 700; // 단어 굵게
+        font-size: 2em;
+        font-weight: 700;
         background: linear-gradient(90deg, #8e2de2, #4a00e0);
-        -webkit-background-clip: text; // 텍스트에 그라디언트를 적용
-        color: transparent; // 글자 색을 투명하게 만들어 그라디언트가 보이도록
+        -webkit-background-clip: text;
+        color: transparent;
       }
 
       .meaning {
@@ -46,18 +46,14 @@
         text-align: center;
         align-items: center;
         width: 50%;
-        font-size: 1.5em; // 뜻 크기 약간 크게
-        font-weight: 500; // 뜻도 강조
-        color: transparent; // 텍스트 색상 투명으로 설정 (그라디언트 효과를 위해)
-        background: linear-gradient(
-          135deg,
-          #34d399,
-          #10b981
-        ); // 민트색 그라디언트
-        background-clip: text; // 텍스트에 그라디언트 적용
-        -webkit-background-clip: text; // Safari를 위한 설정
+        font-size: 1.5em;
+        font-weight: 500;
+        color: transparent;
+        background: linear-gradient(135deg, #34d399, #10b981);
+        background-clip: text;
+        -webkit-background-clip: text;
         margin-top: 5px;
-        text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); // 약간의 그림자 효과로 텍스트 강조
+        text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
       }
     }
 
@@ -68,20 +64,20 @@
       justify-content: center;
       .memo {
         font-size: 1em;
-        color: #6b7280; // 연한 회색 텍스트
+        color: #6b7280;
         margin-bottom: 10px;
-        font-style: italic; // 메모는 이탤릭체로 강조
+        font-style: italic;
         margin: 0;
-        cursor: pointer; /* 클릭할 수 있다는 걸 알리기 위해 커서 변경 */
-        font-size: 14px; /* 글자 크기 */
+        cursor: pointer;
+        font-size: 14px;
         padding: 8px;
         width: 90%;
       }
 
       .memo-input {
-        background-color: #f5f5f5; /* 배경 색상 */
-        border: 1px solid #ccc; /* 테두리 */
-        color: #333; /* 글자 색상 */
+        background-color: #f5f5f5;
+        border: 1px solid #ccc;
+        color: #333;
         padding: 8px; /* 안쪽 여백 */
         border-radius: 4px; /* 모서리 둥글게 */
         width: 100%; /* 전체 너비 사용 */
