--- a/front/src/components/small/WordBox.scss
+++ b/front/src/components/small/WordBox.scss
@@ -128,6 +128,10 @@
       width: 90%;
       color: lightgray;
     }
+    .play-voice-btn {
+      width: 90%;
+      color: #4a90e2;
+    }
     .icon {
       font-size: 1.1em;
       margin: 1px;
