--- a/front/src/components/small/WordBox.scss
+++ b/front/src/components/small/WordBox.scss
@@ -116,6 +116,9 @@
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     }
 
+    .dic-btn {
+    }
+
     .naver-dic-btn {
       color: #40b65b;
     }
