--- a/front/src/components/Words.scss
+++ b/front/src/components/Words.scss
@@ -60,41 +60,51 @@
       }
     }
 
-    .incorrect-list-btn {
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      font-weight: bold;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-      width: 60px;
-      height: 40px;
+    .words-btns {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-      .icon {
-        width: 25px;
-        height: 25px;
+      justify-content: space-around;
+      width: 30%;
+      .word-btn {
+        margin-left: 3px;
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        font-weight: bold;
+        cursor: pointer;
+        transition: transform 0.3s ease;
+        width: 60px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        .icon {
+          width: 25px;
+          height: 25px;
+        }
+
+        &:hover {
+          transform: scale(1.1);
+        }
       }
 
-      &:hover {
-        transform: scale(1.1);
+      .test-btn {
+        background: linear-gradient(90deg, #8e2de2, #4a00e0);
       }
-    }
 
-    .create-incorrect-list-button {
-      background: linear-gradient(to right, #3b82f6, #10b981, #14b8a6);
-    }
+      .create-incorrect-list-button {
+        background: linear-gradient(to right, #3b82f6, #10b981, #14b8a6);
+      }
 
-    .join-incorrect-list-button {
-      background: linear-gradient(to right, #ef4444, #f59e0b, #ec4899);
-    }
+      .join-incorrect-list-button {
+        background: linear-gradient(to right, #ef4444, #f59e0b, #ec4899);
+      }
 
-    .back-to-list-button {
-      background: linear-gradient(to right, #10b981, #16a34a, #22c55e);
+      .back-to-list-button {
+        background: linear-gradient(to right, #10b981, #16a34a, #22c55e);
+      }
     }
   }
 
