--- a/front/src/components/test/Preparation.scss
+++ b/front/src/components/test/Preparation.scss
@@ -4,21 +4,46 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  .preparation-title {
+    font-size: 2rem; /* 제목 크기 */
+    font-weight: bold; /* 글씨 두께 */
+    color: #333; /* 색상 */
+    text-align: center; /* 중앙 정렬 */
+    margin-bottom: 20px; /* 아래쪽 여백 */
+    text-transform: uppercase; /* 대문자로 변환 */
+    letter-spacing: 1px; /* 글자 간격 */
+  }
+  .preparation-select-mode {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    .mode-button {
+      padding: 10px;
+      margin: 5px;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      font-size: 1.5em;
+      color: #4b3f72;
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+    }
+  }
 
   .lists {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
     gap: 10px;
 
     .list-row {
-      width: 100%;
+      width: 375px;
       display: flex;
       justify-content: center;
 
       .list-card-body {
         display: flex;
-        width: 80%;
+        width: 90%;
         background-color: rgba(255, 255, 255, 0.9);
         border-radius: 5px;
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1); /* 수평, 수직, 흐림 반경, 색상 */
@@ -45,7 +70,7 @@
           .list-card-title {
             font-size: 1em;
             font-weight: bold;
-            width: 50%;
+            width: 70%;
             .words-count {
               font-size: 0.8em;
               color: grey;
@@ -59,7 +84,7 @@
             display: flex;
             justify-content: space-around;
             align-items: center;
-            width: 40%;
+            width: 30%;
             height: 100%;
             .list-btn {
               padding: 5px;
@@ -75,7 +100,7 @@
               background: linear-gradient(to right, #ef4444, #f59e0b, #ec4899);
             }
             .icon {
-              font-size: 2rem;
+              font-size: 1.5rem;
               color: white;
             }
           }
@@ -97,6 +122,80 @@
         display: inline-block;
         animation: pulse 1s infinite;
       }
+    }
+    // @media screen and (min-width: 768px) {
+    //   .list-row {
+    //     width: 500px;
+    //   }
+    // }
+  }
+
+  .preparation-nav {
+    width: 100%;
+    background-color: red;
+    position: fixed;
+    bottom: 50px; /* 아랫면이 화면 하단에서 50px 위로 위치 */
+    display: flex;
+    .preparation-contents {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 70%;
+      background-color: #eee;
+      .empty-message {
+        color: grey;
+      }
+      .preparation-summary {
+        display: flex;
+        align-items: flex-end;
+        span {
+          margin-left: 10px;
+          color: red;
+          font-size: 0.8em;
+        }
+      }
+    }
+    .preparation-btn {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 30%;
+      padding: 12px 20px;
+      background: linear-gradient(
+        90deg,
+        #4facfe,
+        #00f2fe
+      ); /* 파란 계열 그라디언트 */
+      color: #fff;
+      font-size: 16px;
+      font-weight: bold;
+      text-align: center;
+      transition: all 0.3s ease;
+      cursor: pointer;
+      border: none;
+      font-size: 1.5em;
+    }
+
+    .preparation-btn:hover {
+      background: linear-gradient(
+        90deg,
+        #00f2fe,
+        #4facfe
+      ); /* 그라디언트 반전 */
+      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); /* 더 깊은 그림자 */
+      transform: translateY(-2px); /* 살짝 떠오르는 효과 */
+    }
+
+    .preparation-btn:active {
+      background: linear-gradient(
+        90deg,
+        #0078ff,
+        #00d4ff
+      ); /* 눌렸을 때 약간 어두운 색 */
+      transform: translateY(0); /* 눌린 상태 복원 */
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); /* 그림자 감소 */
     }
   }
 }
