--- a/front/src/components/test/Preparation.scss
+++ b/front/src/components/test/Preparation.scss
@@ -37,7 +37,7 @@
     gap: 10px;
 
     .list-row {
-      width: 375px;
+      width: 100%;
       display: flex;
       justify-content: center;
 
@@ -123,11 +123,11 @@
         animation: pulse 1s infinite;
       }
     }
-    // @media screen and (min-width: 768px) {
-    //   .list-row {
-    //     width: 500px;
-    //   }
-    // }
+    @media screen and (min-width: 768px) {
+      .list-row {
+        width: 500px;
+      }
+    }
   }
 
   .preparation-nav {
