--- a/front/src/components/test/Preparation.scss
+++ b/front/src/components/test/Preparation.scss
@@ -132,17 +132,19 @@
 
   .preparation-nav {
     width: 100%;
-    background-color: red;
     position: fixed;
-    bottom: 50px; /* 아랫면이 화면 하단에서 50px 위로 위치 */
+    bottom: 50px;
     display: flex;
+    border-radius: 10px;
+    box-shadow: 0 -4px 6px rgba(0, 128, 255, 0.3); /* 연한 파란색 그림자 */
+
     .preparation-contents {
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       width: 70%;
-      background-color: #eee;
+      background-color: #e7f5ff;
       .empty-message {
         color: grey;
       }
@@ -163,11 +165,7 @@
       justify-content: center;
       width: 30%;
       padding: 12px 20px;
-      background: linear-gradient(
-        90deg,
-        #4facfe,
-        #00f2fe
-      ); /* 파란 계열 그라디언트 */
+      background: linear-gradient(90deg, #4facfe, #00f2fe);
       color: #fff;
       font-size: 16px;
       font-weight: bold;
@@ -179,23 +177,15 @@
     }
 
     .preparation-btn:hover {
-      background: linear-gradient(
-        90deg,
-        #00f2fe,
-        #4facfe
-      ); /* 그라디언트 반전 */
-      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); /* 더 깊은 그림자 */
-      transform: translateY(-2px); /* 살짝 떠오르는 효과 */
+      background: linear-gradient(90deg, #00f2fe, #4facfe);
+      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
+      transform: translateY(-2px);
     }
 
     .preparation-btn:active {
-      background: linear-gradient(
-        90deg,
-        #0078ff,
-        #00d4ff
-      ); /* 눌렸을 때 약간 어두운 색 */
-      transform: translateY(0); /* 눌린 상태 복원 */
-      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1); /* 그림자 감소 */
+      background: linear-gradient(90deg, #0078ff, #00d4ff);
+      transform: translateY(0);
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
     }
   }
 }
@@ -213,12 +203,12 @@
 }
 @keyframes pulse {
   0% {
-    transform: scale(1); /* 원래 크기 */
+    transform: scale(1);
   }
   50% {
-    transform: scale(1.1); /* 크기를 약간 크게 */
+    transform: scale(1.1);
   }
   100% {
-    transform: scale(1); /* 원래 크기로 돌아옴 */
+    transform: scale(1);
   }
 }
