--- a/front/src/components/test/Preparation.scss
+++ b/front/src/components/test/Preparation.scss
@@ -136,7 +136,8 @@
     bottom: 50px;
     display: flex;
     border-radius: 10px;
-    box-shadow: 0 -4px 6px rgba(0, 128, 255, 0.3); /* 연한 파란색 그림자 */
+    box-shadow: 0 -4px 6px rgba(0, 128, 255, 0.3);
+    z-index: 10;
 
     .preparation-contents {
       display: flex;
