--- a/front/src/components/small/AlertModal.scss
+++ b/front/src/components/small/AlertModal.scss
@@ -42,6 +42,7 @@
   border-radius: 10px;
   width: 90%;
   text-align: center;
+
   z-index: 61;
   opacity: 0;
   visibility: hidden;
@@ -66,6 +67,7 @@
   .alert-message {
     display: flex;
     align-items: center;
+    flex-direction: column;
     font-weight: bold;
     width: 100%;
     img {
