--- a/front/src/components/test/Testing.scss
+++ b/front/src/components/test/Testing.scss
@@ -3,11 +3,72 @@
   display: flex;
   flex-direction: column;
   .question-header {
+    background-color: #eee;
+    margin-bottom: 30px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    border: 1px solid red;
+    .question-main-info {
+      display: flex;
+      justify-content: space-between;
+      .testing-question-number {
+        font-size: 2rem;
+        font-weight: bold;
+        background: linear-gradient(
+          to right,
+          #ef4444,
+          #f59e0b,
+          #ec4899
+        ); // 그라데이션
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-align: left;
+        padding: 1rem;
+        font-style: italic;
+        animation: tracking-in-expand 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+          both;
+      }
+      .testing-lists-info {
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        animation: tracking-in-expand 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+          both;
+
+        .list-name {
+          font-size: 1rem;
+          font-weight: bold;
+          color: #333; /* 어두운 회색으로 기본 텍스트 색상 */
+          margin: 10px;
+          padding: 8px 15px;
+          border-radius: 8px;
+          background: linear-gradient(90deg, #f3f4f6, #e9eff5);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+          text-align: center;
+          transition: all 0.3s ease;
+
+          &:hover {
+            transform: scale(1.05);
+            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.15);
+            background: linear-gradient(90deg, #e9eff5, #dfe9f5);
+          }
+
+          .is-incorrect {
+            margin-left: 10px;
+            color: red;
+            font-size: 0.8em;
+          }
+        }
+      }
+    }
+    .testing-guage {
+      width: 100%;
+    }
   }
   .question-contents {
-    width: 100%;
+    width: 90%;
     border: 1px solid green;
   }
   .question-options {
