--- a/front/src/components/test/Result.scss
+++ b/front/src/components/test/Result.scss
@@ -7,13 +7,20 @@
     top: 0;
     display: flex;
     flex-direction: column;
-    background: linear-gradient(270deg, #e9d7f3, #dfefff, #ffe9ee, #fff7fb);
+    background: linear-gradient(
+      270deg,
+      rgba(233, 215, 243, 0.8),
+      rgba(223, 239, 255, 0.8),
+      rgba(255, 233, 238, 0.8),
+      rgba(255, 247, 251, 0.8)
+    );
 
+    z-index: 5;
     .test-info {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      z-index: 5;
+
       .test-date {
         font-size: 1.5rem;
         font-weight: bold;
@@ -42,35 +49,35 @@
       }
       .title {
         font-size: 1em;
-        background: linear-gradient(90deg, #2c2c2c, #000000);
+        background: linear-gradient(
+          90deg,
+          rgba(44, 44, 44, 0.5),
+          rgba(0, 0, 0, 0.5)
+        );
         -webkit-background-clip: text;
       }
       .fail {
         background: linear-gradient(90deg, #f28b82, #fbbc04);
         -webkit-background-clip: text;
-        text-shadow: 1px 1px 5px rgba(242, 139, 130, 0.6),
-          0 0 25px rgba(251, 188, 4, 0.4);
+        text-shadow: 0 1px 3px rgba(255, 255, 255, 0.2);
       }
 
       .notice {
         background: linear-gradient(90deg, #fbbc04, #fff475);
         -webkit-background-clip: text;
-        text-shadow: 1px 1px 5px rgba(251, 188, 4, 0.6),
-          0 0 25px rgba(255, 244, 117, 0.4);
+        text-shadow: 0 1px 3px rgba(255, 255, 255, 0.2);
       }
 
       .success {
         background: linear-gradient(90deg, #34a853, #81c995);
         -webkit-background-clip: text;
-        text-shadow: 1px 1px 5px rgba(52, 168, 83, 0.6),
-          0 0 25px rgba(129, 201, 149, 0.4);
+        text-shadow: 0 1px 3px rgba(255, 255, 255, 0.2);
       }
 
       .perfect {
         background: linear-gradient(90deg, #4285f4, #8ab4f8);
         -webkit-background-clip: text;
-        text-shadow: 1px 1px 5px rgba(66, 133, 244, 0.6),
-          0 0 25px rgba(138, 180, 248, 0.4);
+        text-shadow: 0 1px 3px rgba(255, 255, 255, 0.2);
       }
     }
 
@@ -87,7 +94,7 @@
       .list-name {
         font-size: 1rem;
         font-weight: bold;
-        color: #6b7280; /* 중간 톤의 회색 */
+        color: #6b7280;
         margin: 10px;
         padding: 8px 15px;
         border-radius: 8px;
@@ -115,11 +122,17 @@
     flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
+    margin-top: 10px;
 
     .result-word-card {
-      border: blue solid 1px;
       display: flex;
       justify-content: space-between;
+      background: linear-gradient(
+        to right,
+        rgba(255, 95, 109, 0.2),
+        rgba(255, 195, 160, 0.2)
+      );
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
       .origin-word {
         display: flex;
@@ -131,7 +144,7 @@
         background: linear-gradient(90deg, #8e2de2, #4a00e0);
         text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
         -webkit-background-clip: text;
-        width: 20%;
+        width: 30%;
       }
       .origin-mean {
         display: flex;
@@ -144,7 +157,7 @@
         background-clip: text;
         -webkit-background-clip: text;
         text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-        width: 20%;
+        width: 30%;
       }
       .chosen-option {
         display: flex;
@@ -152,22 +165,20 @@
         text-align: center;
         align-items: center;
         font-weight: 700;
-        color: transparent;
-        background: linear-gradient(135deg, #f87171, #ef4444);
-        background-clip: text;
-        -webkit-background-clip: text;
+        color: #ef4444; /* 텍스트 색상 */
         text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-        width: 20%;
+        width: 30%;
+        text-decoration: line-through; /* 텍스트에 가로줄 추가 */
       }
       .list-name {
-        position: relative;
+        position: absolute;
         font-size: 0.6em;
         opacity: 0.6;
         display: flex;
         justify-content: center;
         text-align: center;
         align-items: center;
-        width: 15%;
+        padding-left: 5px;
       }
       .incorrect-btn {
         width: 10%;
