--- a/front/src/components/test/Result.scss
+++ b/front/src/components/test/Result.scss
@@ -92,11 +92,11 @@
         both;
 
       .list-name {
-        font-size: 1rem;
+        font-size: 0.8em;
         font-weight: bold;
         color: #6b7280;
         margin: 10px;
-        padding: 8px 15px;
+        padding: 10px;
         border-radius: 8px;
         background: linear-gradient(90deg, #f3f4f6, #e9eff5);
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
