--- a/front/src/components/test/small/TestWordBox.scss
+++ b/front/src/components/test/small/TestWordBox.scss
@@ -16,7 +16,7 @@
 
   .main-content {
     width: 80%;
-    .main-box {
+    .test-main-box {
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
