--- a/front/src/components/Home.scss
+++ b/front/src/components/Home.scss
@@ -4,6 +4,18 @@
   flex-direction: column;
   justify-content: center;
 
+  @media (min-width: 500px) {
+    .hi-box {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .hi-img {
+      width: 500px;
+    }
+  }
+
   .contents-home {
     position: relative;
     border-radius: 15px;
@@ -123,6 +135,10 @@
   }
 
   &.desktop {
+    .hi-box {
+      width: 100%;
+    }
+
     .contents-home {
       padding: 20px;
 
