--- a/front/src/components/small/CreateWordModal.scss
+++ b/front/src/components/small/CreateWordModal.scss
@@ -38,6 +38,26 @@
 .create-word-modal-body {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  .naver-dic-btn {
+    color: white;
+    background-color: #40b65b;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+  }
+
+  .naver-dic-btn:hover {
+    background-color: darkgreen;
+  }
+
+  .naver-dic-btn:active {
+    transform: scale(0.98);
+  }
 }
 
 .create-word-modal-body label {
